--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="%PUBLIC_URL%/logo32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="The Portfolio application for yenum.dev, The hybridcoder">
+    <meta name="keywords" content="opone, chukwuyenum, eboka, yenum, hybrid, coder, react, php, laravel, javascript, tailwind, bootstrap 4, projects, gd50, cs50, unity, c#, programmer, flutter, responsive, crm, blog">
+    <meta name="author" content="Chukwuyenum Opone">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,9 +29,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Yenum Opone</title>
 
-    <link href="%PUBLIC_URL%/main.3f6952e4.css" rel="stylesheet"></head>
+    <!-- <link href="%PUBLIC_URL%/main.3f6952e4.css" rel="stylesheet"></head> -->
   </head>
   <body class="minimal bg-gray">
     <div id="site-border-left"></div>
@@ -47,14 +52,14 @@
     -->
   </body>
 
-  <script>
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", function (event) {
         type();
         movingBackgroundImage();
       });
-  </script>
+  </script> -->
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="./main.min.js"></script>
+  <!-- <script type="text/javascript" src="./main.min.js"></script> -->
 
 </html>
