--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,19 @@
     <link rel="icon" href="%PUBLIC_URL%/logo32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Portfolio application for yenum.dev, The hybridcoder">
-    <meta name="keywords" content="opone, chukwuyenum, eboka, yenum, hybrid, coder, react, php, laravel, javascript, tailwind, bootstrap 4, projects, gd50, cs50, unity, c#, programmer, flutter, responsive, crm, blog">
-    <meta name="author" content="Chukwuyenum Opone">
+    <meta
+      name="description"
+      content="The Portfolio application for yenum.dev, The hybridcoder"
+    />
+    <meta
+      name="keywords"
+      content="opone, chukwuyenum, eboka, yenum, hybrid, coder, react, php, laravel, javascript, tailwind, bootstrap 4, projects, gd50, cs50, unity, c#, programmer, flutter, responsive, crm, blog"
+    />
+    <meta name="author" content="Chukwuyenum Opone" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -20,6 +26,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- CSS only -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -59,7 +66,10 @@
       });
   </script> -->
   <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
+    crossorigin="anonymous"
+  ></script>
   <!-- <script type="text/javascript" src="./main.min.js"></script> -->
-
 </html>
