change start url

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,7 @@
 
     <!-- <link href="%PUBLIC_URL%/main.3f6952e4.css" rel="stylesheet"></head> -->
   </head>
-  <body class="minimal bg-gray">
-    <div id="site-border-left"></div>
-    <div id="site-border-right"></div>
-    <div id="site-border-top"></div>
-    <div id="site-border-bottom"></div>
+  <body class="bg-gray">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
