--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     <!-- <link href="%PUBLIC_URL%/main.3f6952e4.css" rel="stylesheet"></head> -->
   </head>
-  <body class="bg-gray">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
