--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="%PUBLIC_URL%/logo32.png" />
+    <meta property="og:title" content="Yenum's Portfolio">
+    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQHng9Yw9HfvoA/profile-displayphoto-shrink_200_200/0/1636095704799?e=1642032000&v=beta&t=IHfrbn1CzVPqwAU14FIpuQUrJf1QSKtCGsT2Et4xhFo">
+    <meta property="og:description" content="Software Developer">
+    <meta property="og:url" content="https://yenum.dev">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
