--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="%PUBLIC_URL%/logo32.png" />
-    <meta property="og:title" content="Yenum's Portfolio">
-    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQHng9Yw9HfvoA/profile-displayphoto-shrink_200_200/0/1636095704799?e=1642032000&v=beta&t=IHfrbn1CzVPqwAU14FIpuQUrJf1QSKtCGsT2Et4xhFo">
-    <meta property="og:description" content="Software Developer">
-    <meta property="og:url" content="https://yenum.dev">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="Yenum's Portfolio" />
+    <meta
+      property="og:image"
+      content="https://media-exp1.licdn.com/dms/image/C5603AQHng9Yw9HfvoA/profile-displayphoto-shrink_200_200/0/1636095704799?e=1642032000&v=beta&t=IHfrbn1CzVPqwAU14FIpuQUrJf1QSKtCGsT2Et4xhFo"
+    />
+    <meta property="og:description" content="Software Developer" />
+    <meta property="og:url" content="https://yenum.dev" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -61,22 +64,36 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Yenum Opone</title>
+    <!-- Style dependencies -->
+    <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
+    <!-- Blueprint stylesheets -->
+    <link
+      href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/@blueprintjs/core@^3.10.0/lib/css/blueprint.css"
+      rel="stylesheet"
+    />
 
     <!-- <link href="%PUBLIC_URL%/main.3f6952e4.css" rel="stylesheet"></head> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Blueprint dependencies -->
+    <script src="https://unpkg.com/classnames@^2.2"></script>
+    <script src="https://unpkg.com/dom4@^1.8"></script>
+    <script src="https://unpkg.com/tslib@^1.9.0"></script>
+    <script src="https://unpkg.com/react@^16.2.0/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@^16.2.0/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react-transition-group@^2.2.1/dist/react-transition-group.min.js"></script>
+    <script src="https://unpkg.com/popper.js@^1.14.1/dist/umd/popper.js"></script>
+    <script src="https://unpkg.com/react-popper@^1.0.0/dist/index.umd.min.js"></script>
+    <script src="https://unpkg.com/resize-observer-polyfill@^1.5.0"></script>
+    <!-- Blueprint packages (note: icons script must come first) -->
+    <script src="https://unpkg.com/@blueprintjs/icons@^3.4.0"></script>
+    <script src="https://unpkg.com/@blueprintjs/core@^3.10.0"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
